--- a/assignment02.html
+++ b/assignment02.html
@@ -4,12 +4,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>Student Bio</title>
 </head>
 <body>
     <h1>Student Bio</h1>
     <h2>Julia Christian</h2>
-    <img src="https://photos.app.goo.gl/szkgt9bQWbJVci0s1" alt="photo of Julia in South Korea">
+    <img src="https://lh3.googleusercontent.com/bvmonYeXS5E9LlfQ-e3-i_xHEm4Y94rG7jj1NnNQqiAR6NePezghwxt89NxBNiX-cTECWDvbx_FLoBHkHl28p4zI9ijoiPZJkjYWAUObGQE6g_c54VIuyCuXyfKqFR_jAaPKfIskR7I9u-zFYST5wPAEsKc8kvVXJ-ljqKagF-f2-yP6DfUvzQuSW31mT7tAvOw4VkJsxGjLad5q6Mh6fl7RCuj5KUr7d5Hzk-URMC85HLsEy9bjAJQpTjQ0ZjqNjyzbzK-YJkgjYa40Lyntzr5tSfuIKkFz6jlPn3ax7iL1heZRd6MJtxTwYHbPaIoFMB1B2J47VjwLX3rfFg8JZAjYCbZZ1KbszUhOk_nwA2wiAuvOgFbanJ2WlQdUyDb7aarzdm5yzGal5BSMv1J2l67hgN5du79_LOijVdGSFWhWDkQKtARacUXU5l3cJBgi0ctWf2OCEYkFUI2n53YSWDRYwJYjhu8J4JVQ5xJRTIDzREo_DYVjHw-e9pjKBR-Irqp1LyaJoyqd-bXJJbm4CLTgHngNTWL2oSIaE-yi_iHEPPvGdHCIiQaMKnqmThrKePtG3NRohaIvp8Dqa2tnqBuXKVxa2on13cgCvJDd0bFcWeLFfPFNbhxPrMTehtM_eMQ_u-hwjpjUW79Ps24UdbPF6LJaumm-Gg=w1056-h1408-no" alt="photo of Julia in South Korea">
+
+    <h1>Contact Info</h1>
+    <ul>
+        <li><strong>Email:</strong> <a href="mailto:sixtyonefights@gmail.com">sixtyonefights@gmail.com</a></li>
+        <li><strong>Github:</strong> <a href="https://github.com/1661SONS">@1661SONS</a></li>
+        <li><strong>Portfolio:</strong> <a href="http://jchrist.work">jchrist.work</a></li>
+    </ul>
     
 </body>
 </html>
