made all external links open in a new tab

--- a/assignment02.html
+++ b/assignment02.html
@@ -14,8 +14,8 @@
     <h1>Contact Info</h1>
     <ul>
         <li><strong>Email:</strong> <a href="mailto:sixtyonefights@gmail.com">sixtyonefights@gmail.com</a></li>
-        <li><strong>Github:</strong> <a href="https://github.com/1661SONS">@1661SONS</a></li>
-        <li><strong>Portfolio:</strong> <a href="http://jchrist.work">jchrist.work</a></li>
+        <li><strong>Github:</strong> <a target="_blank" href="https://github.com/1661SONS">@1661SONS</a></li>
+        <li><strong>Portfolio:</strong> <a target="_blank" href="http://jchrist.work">jchrist.work</a></li>
     </ul>
     
 </body>
