added some minor styling

--- a/assignment02.html
+++ b/assignment02.html
@@ -7,19 +7,27 @@
     <title>Student Bio</title>
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
     <h1>Student Bio</h1>
-    <h2>Julia Christian</h2>
-    <img src="https://lh3.googleusercontent.com/bvmonYeXS5E9LlfQ-e3-i_xHEm4Y94rG7jj1NnNQqiAR6NePezghwxt89NxBNiX-cTECWDvbx_FLoBHkHl28p4zI9ijoiPZJkjYWAUObGQE6g_c54VIuyCuXyfKqFR_jAaPKfIskR7I9u-zFYST5wPAEsKc8kvVXJ-ljqKagF-f2-yP6DfUvzQuSW31mT7tAvOw4VkJsxGjLad5q6Mh6fl7RCuj5KUr7d5Hzk-URMC85HLsEy9bjAJQpTjQ0ZjqNjyzbzK-YJkgjYa40Lyntzr5tSfuIKkFz6jlPn3ax7iL1heZRd6MJtxTwYHbPaIoFMB1B2J47VjwLX3rfFg8JZAjYCbZZ1KbszUhOk_nwA2wiAuvOgFbanJ2WlQdUyDb7aarzdm5yzGal5BSMv1J2l67hgN5du79_LOijVdGSFWhWDkQKtARacUXU5l3cJBgi0ctWf2OCEYkFUI2n53YSWDRYwJYjhu8J4JVQ5xJRTIDzREo_DYVjHw-e9pjKBR-Irqp1LyaJoyqd-bXJJbm4CLTgHngNTWL2oSIaE-yi_iHEPPvGdHCIiQaMKnqmThrKePtG3NRohaIvp8Dqa2tnqBuXKVxa2on13cgCvJDd0bFcWeLFfPFNbhxPrMTehtM_eMQ_u-hwjpjUW79Ps24UdbPF6LJaumm-Gg=w1056-h1408-no" alt="photo of Julia and South Korean palace guard">
+    
+    <!-- BIO SECTION -->
+    <section class="bio">
+        <h2>Julia Christian</h2>
+        <img src="https://lh3.googleusercontent.com/bvmonYeXS5E9LlfQ-e3-i_xHEm4Y94rG7jj1NnNQqiAR6NePezghwxt89NxBNiX-cTECWDvbx_FLoBHkHl28p4zI9ijoiPZJkjYWAUObGQE6g_c54VIuyCuXyfKqFR_jAaPKfIskR7I9u-zFYST5wPAEsKc8kvVXJ-ljqKagF-f2-yP6DfUvzQuSW31mT7tAvOw4VkJsxGjLad5q6Mh6fl7RCuj5KUr7d5Hzk-URMC85HLsEy9bjAJQpTjQ0ZjqNjyzbzK-YJkgjYa40Lyntzr5tSfuIKkFz6jlPn3ax7iL1heZRd6MJtxTwYHbPaIoFMB1B2J47VjwLX3rfFg8JZAjYCbZZ1KbszUhOk_nwA2wiAuvOgFbanJ2WlQdUyDb7aarzdm5yzGal5BSMv1J2l67hgN5du79_LOijVdGSFWhWDkQKtARacUXU5l3cJBgi0ctWf2OCEYkFUI2n53YSWDRYwJYjhu8J4JVQ5xJRTIDzREo_DYVjHw-e9pjKBR-Irqp1LyaJoyqd-bXJJbm4CLTgHngNTWL2oSIaE-yi_iHEPPvGdHCIiQaMKnqmThrKePtG3NRohaIvp8Dqa2tnqBuXKVxa2on13cgCvJDd0bFcWeLFfPFNbhxPrMTehtM_eMQ_u-hwjpjUW79Ps24UdbPF6LJaumm-Gg=w1056-h1408-no" alt="photo of Julia and South Korean palace guard">
 
-    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin suscipit nec nunc nec suscipit. Morbi vitae pharetra nulla, eget viverra ante. Morbi et varius massa, a eleifend erat. Nullam auctor dictum lorem, sed tempus purus facilisis in. Vivamus a enim ex. Mauris eleifend et nunc elementum dapibus. Vivamus fringilla lectus non arcu feugiat, a luctus lacus convallis. Duis sit amet lorem ac erat iaculis consequat. Suspendisse faucibus elit eget metus tincidunt pulvinar. Quisque fermentum ut ante ac pulvinar. Integer laoreet nulla vel mi elementum, aliquet maximus ex mattis. Sed auctor justo porttitor, feugiat turpis non, fermentum tellus. Nam ut metus vitae libero pulvinar sodales vitae eget turpis. Cras at urna dapibus, posuere lorem id, facilisis diam. Ut tempus diam quis tellus ornare imperdiet.</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin suscipit nec nunc nec suscipit. Morbi vitae pharetra nulla, eget viverra ante. Morbi et varius massa, a eleifend erat. Nullam auctor dictum lorem, sed tempus purus facilisis in. Vivamus a enim ex. Mauris eleifend et nunc elementum dapibus. Vivamus fringilla lectus non arcu feugiat, a luctus lacus convallis. Duis sit amet lorem ac erat iaculis consequat. Suspendisse faucibus elit eget metus tincidunt pulvinar. Quisque fermentum ut ante ac pulvinar. Integer laoreet nulla vel mi elementum, aliquet maximus ex mattis. Sed auctor justo porttitor, feugiat turpis non, fermentum tellus. Nam ut metus vitae libero pulvinar sodales vitae eget turpis. Cras at urna dapibus, posuere lorem id, facilisis diam. Ut tempus diam quis tellus ornare imperdiet.</p>
+    </section>
 
-    <h1>Contact Info</h1>
-    <ul>
-        <li><strong>Email:</strong> <a href="mailto:sixtyonefights@gmail.com">sixtyonefights@gmail.com</a></li>
-        <li><strong>Github:</strong> <a target="_blank" href="https://github.com/1661SONS">@1661SONS</a></li>
-        <li><strong>Portfolio:</strong> <a target="_blank" href="http://jchrist.work">jchrist.work</a></li>
-    </ul>
+    <!-- CONTACT SECTION -->
+    <section class="contact">
+        <h1>Contact Info</h1>
+        <ul>
+            <li><strong>Email:</strong> <a href="mailto:sixtyonefights@gmail.com">sixtyonefights@gmail.com</a></li>
+            <li><strong>Github:</strong> <a target="_blank" href="https://github.com/1661SONS">@1661SONS</a></li>
+            <li><strong>Portfolio:</strong> <a target="_blank" href="http://jchrist.work">jchrist.work</a></li>
+        </ul>
+    </section>
     
 </body>
 </html>
