--- a/assignment02.html
+++ b/assignment02.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-    <h1>Student Bio</h1>
+    <h1 class="center">Student Bio</h1>
     
     <!-- BIO SECTION -->
     <section class="bio">
@@ -22,11 +22,13 @@
     <!-- CONTACT SECTION -->
     <section class="contact">
         <h1>Contact Info</h1>
-        <ul>
-            <li><strong>Email:</strong> <a href="mailto:sixtyonefights@gmail.com">sixtyonefights@gmail.com</a></li>
-            <li><strong>Github:</strong> <a target="_blank" href="https://github.com/1661SONS">@1661SONS</a></li>
-            <li><strong>Portfolio:</strong> <a target="_blank" href="http://jchrist.work">jchrist.work</a></li>
-        </ul>
+        <div >
+            <ul>
+                <li><strong>Email:</strong> <a href="mailto:sixtyonefights@gmail.com">sixtyonefights@gmail.com</a></li>
+                <li><strong>Github:</strong> <a target="_blank" href="https://github.com/1661SONS">@1661SONS</a></li>
+                <li><strong>Portfolio:</strong> <a target="_blank" href="http://jchrist.work">jchrist.work</a></li>
+            </ul>
+        </div>
     </section>
     
 </body>
